--- a/src/components/Footer/Footer.css
+++ b/src/components/Footer/Footer.css
@@ -1,6 +1,6 @@
 
 .footer {
-  background: #013328;
+  background: #4e3105;
 }
 
 .Logo img {
@@ -29,7 +29,7 @@
 
 
 .footer__quick-links .list-group-item {
-  background: #013328;
+  background:  #4e3105;
   border: none; 
   padding: 10px;
   margin-bottom: 5px; 
