--- a/src/services/service.css
+++ b/src/services/service.css
@@ -9,15 +9,15 @@
 
 .service__item  span i{
 font-size: 2.2rem;
-background: var(--primary-color);
+background: rgb(152, 109, 49);
 padding: 10px;
 border-radius: 50px;
-color: #fff;
+color:  #3c2a09;
 font-weight: 200 !important;
 }
 
 .service__item h3{
-    color: var(--primary-color);
+    color:  #4e3105;
     font-size: 1.1rem;
     font-weight: 500;
 }
@@ -25,7 +25,7 @@ font-weight: 200 !important;
 .service__item p{
     font-size:0.9rem ;
     margin-top: 5px;
-    color: #222;
+    color: #4e3105;
 }
 
 @media only screen and (max-width:992px){
