--- a/src/Styles/admin-nav.css
+++ b/src/Styles/admin-nav.css
@@ -1,71 +1,101 @@
-.admin__header{
+.admin__header {
     width: 100%;
-   padding: 20px 0px;
-     background: #013328;
- }
- .admin__nav-top{
-     width: 100px;
- 
- }
- .admin__nav-wrapper-top{
-     display: flex;
-     align-items:center ;
-     justify-content: space-between;
-     column-gap: 3rem;
- 
- }
- .admin__nav-top-right img{
-     width: 40px;
-     height: 40px;
-     border-radius: 50px;
-     cursor: pointer;
- 
- }
- .admin__nav-top-right{
-     display: flex;
-     align-items: center;
-     column-gap: 2rem;
- }
- .admin__nav-wrapper-top .search__box{
- display: flex;
- align-items: center;
- justify-content: space-between;
- 
- }
- .admin__nav-top-right span i{
-     color: whitesmoke;
-     cursor: pointer;
- }
- .admin__nav-wrapper-top .logo h2{
- font-style: 1.2rem;
- color: whitesmoke;
- 
- }
- .admin__menu{
-     width: 100%;
-     height: 100px;
-     line-height: 70px;
-     background: var(--card-bg-02);
- 
- }
- .admin__navigation{
-     text-align: center;
- }
- .admin__menu-list{
-     display: flex;
-     align-items: center;
-     column-gap: 2.7rem;
-     justify-content: center;
- 
- }
- .admin__menu-list .admin__menu-item a{
- color: #013328;
- font-weight: 500;
- padding: 10px 15px;
- border-radius: 5px;
- text-decoration: none;
- }
- .active__admin-menu{
-     background: whitesmoke;
+    padding: 20px 0px;
+    background: #4e3105;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    
+  }
+  
+  .admin__nav-top {
+    width: 100px;
+    height: 100px;
+  }
+  
+  .admin__nav-wrapper-top {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    column-gap: 3rem;
+  }
+  
+  .admin__nav-top-right img {
+    width: 80px;
+    height: 80px;
+    border-radius: 50px;
+    cursor: pointer;
+    position: relative;
+    left: 400px;
 
- }
+  }
+  
+  .admin__nav-top-right {
+    display: flex;
+    align-items: center;
+    column-gap: 2rem;
+  }
+  
+  .admin__nav-top-right span i {
+    color: #000;;
+    width: 50px;
+    cursor: pointer;
+  }
+  .admin__nav-wrapper-top .logo{
+    width: 100px;
+    height: 100px;
+    position: relative;
+    right: 700px;
+    
+  }
+  
+
+  
+  /* Styles pour la section du menu */
+  .admin__menu {
+    width: 100%;
+    height: 100px;
+    line-height: 70px; /* changed line-height to better fit the height */
+    background: var(--card-bg-02);
+  }
+  
+  .admin__navigation {
+    text-align: center;
+  }
+  
+  .admin__menu-list {
+    display: flex;
+    align-items: center;
+    column-gap: 2.7rem;
+    justify-content: center;
+  }
+  
+  .admin__menu-list .admin__menu-item a {
+    color: #4e3105;
+    font-weight: 500;
+    padding: 10px 15px;
+    border-radius: 5px;
+    text-decoration: none;
+  }
+  
+  .active__admin-menu {
+    background: whitesmoke;
+  }
+  
+  /* Styles pour la boîte de recherche */
+  .search__box {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  
+  .search__box input[type='text'] {
+    width: 1000px;
+    display: flex;
+    justify-content: space-between;
+  }
+  
+  /* Autres styles pour les icônes, etc. */
+  
+  /* .ri-notification-2-line, .ri-settings-5-line, etc. */
+  
