--- a/src/Styles/checkout.css
+++ b/src/Styles/checkout.css
@@ -2,7 +2,7 @@
 
 
 .Billing__info .form__group input{
-border: 1px solid #013328;
+border: 1px solid #4e3105;
 width: 600px;
 height: 50px;
 border-radius: 10px;
@@ -10,7 +10,7 @@ border-radius: 10px;
 
 .checkout__cart{
     padding: 20px;
-    background-color: #013328;
+    background-color: #4e3105;
     color: aliceblue;
     border-radius: 5px;
     position: relative;
@@ -39,7 +39,7 @@ border-radius: 10px;
     padding: 4px 10px;
     border-radius: 5px;
     background-color: #fff;
-    color:  #013328;
+    color:  #4e3105;
     cursor: pointer;
     font-size: 0.9rem;
     font-weight: 600;
