--- a/src/Styles/home.css
+++ b/src/Styles/home.css
@@ -1,7 +1,8 @@
 .hero__section {
-    background: #2d564e;
+    background: #5e4218e3;
   }
-  
+ 
+
   .hero__content h2 {
     color: #fff;
     font-size: 2.5rem;
@@ -24,7 +25,7 @@
     padding: 8px 20px;
     border-radius: 5px;
     color: #fff;
-    background-color: #013328;
+    background-color:  #4e3105;
     cursor: pointer;
     font-size: 1rem;
     margin-top: 40px;
@@ -49,7 +50,7 @@
   }
   
   .timer__count {
-    background: #013328;
+    background:  #4e3105;
     height: 300px;
   }
   
@@ -64,7 +65,7 @@
     padding: 8px 20px;
     border-radius: 5px;
     background-color: #fff;
-    color:  #013328;
+    color:  #4e3105;
     cursor: pointer;
     font-size: 1.2rem;
     margin-top: 10px;
